--- a/index.html
+++ b/index.html
@@ -439,87 +439,6 @@
       </section>
 
       <main>
-        <section>
-          <div class="container py-5 text-center mt-5">
-            <div class="row g-4">
-              <!-- Card 1 -->
-              <div class="col-md-4">
-                <div
-                  class="shadow p-4 bg-white rounded d-flex align-items-center">
-                  <div class="icon-circle me-3">
-                    <i class="bi bi-x-lg"></i>
-                  </div>
-                  <div class="text-start">
-                    <h5 class="fw-bold text-success">No Hidden Cost</h5>
-                    <p class="mb-0 text-muted">We believe in transparent pricing
-                      what you see is what you pay.</p>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Card 2 -->
-              <div class="col-md-4">
-                <div
-                  class="shadow p-4 bg-white rounded d-flex align-items-center">
-                  <div class="icon-circle me-3">
-                    <i class="bi bi-people-fill"></i>
-                  </div>
-                  <div class="text-start">
-                    <h5 class="fw-bold text-success">Dedicated Team</h5>
-                    <p class="mb-0 text-muted">Our team is committed to
-                      providing
-                      you with top-notch service and support.</p>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Card 3 -->
-              <div class="col-md-4">
-                <div
-                  class="shadow p-4 bg-white rounded d-flex align-items-center">
-                  <div class="icon-circle me-3">
-                    <i class="bi bi-telephone-fill"></i>
-                  </div>
-                  <div class="text-start">
-                    <h5 class="fw-bold text-success">24/7 Available</h5>
-                    <p class="mb-0 text-muted">We are always here to assist you,
-                      anytime and anywhere.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        
-
-        <!-- Counter Section Start -->
-
-        <section class="counter-section text-white text-center mt-5">
-          <div class="overlay"></div>
-          <div class="container position-relative py-5">
-            <div class="row mt-5 fs-4 fw-bold">
-              <div class="col-md-3">
-                <h2 class="fw-bold display-6 counter " data-target="1224">0</h2>
-                <p>Happy Clients</p>
-              </div>
-              <div class="col-md-3">
-                <h2 class="fw-bold display-6 counter " data-target="1234">0</h2>
-                <p>Garden Completed</p>
-              </div>
-              <div class="col-md-3">
-                <h2 class="fw-bold display-6 counter " data-target="1334">0</h2>
-                <p>Dedicated Staff</p>
-              </div>
-              <div class="col-md-3">
-                <h2 class="fw-bold display-6 counter " data-target="1434">0</h2>
-                <p>Awards Achieved</p>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <!-- Counter Section End -->
 
         <!-- Why Choosing Us Section Start -->
         <section class="py-5 mt-5">
@@ -608,6 +527,88 @@
         </section>
 
         <!-- Why Choosing Us Section End -->
+        <section>
+          <div class="container py-5 text-center mt-5">
+            <div class="row g-4">
+              <!-- Card 1 -->
+              <div class="col-md-4">
+                <div
+                  class="shadow p-4 bg-white rounded d-flex align-items-center">
+                  <div class="icon-circle me-3">
+                    <i class="bi bi-x-lg"></i>
+                  </div>
+                  <div class="text-start">
+                    <h5 class="fw-bold text-success">No Hidden Cost</h5>
+                    <p class="mb-0 text-muted">We believe in transparent pricing
+                      what you see is what you pay.</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Card 2 -->
+              <div class="col-md-4">
+                <div
+                  class="shadow p-4 bg-white rounded d-flex align-items-center">
+                  <div class="icon-circle me-3">
+                    <i class="bi bi-people-fill"></i>
+                  </div>
+                  <div class="text-start">
+                    <h5 class="fw-bold text-success">Dedicated Team</h5>
+                    <p class="mb-0 text-muted">Our team is committed to
+                      providing
+                      you with top-notch service and support.</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Card 3 -->
+              <div class="col-md-4">
+                <div
+                  class="shadow p-4 bg-white rounded d-flex align-items-center">
+                  <div class="icon-circle me-3">
+                    <i class="bi bi-telephone-fill"></i>
+                  </div>
+                  <div class="text-start">
+                    <h5 class="fw-bold text-success">24/7 Available</h5>
+                    <p class="mb-0 text-muted">We are always here to assist you,
+                      anytime and anywhere.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        
+
+        <!-- Counter Section Start -->
+
+        <section class="counter-section text-white text-center mt-5">
+          <div class="overlay"></div>
+          <div class="container position-relative py-5">
+            <div class="row mt-5 fs-4 fw-bold">
+              <div class="col-md-3">
+                <h2 class="fw-bold display-6 counter " data-target="1224">0</h2>
+                <p>Happy Clients</p>
+              </div>
+              <div class="col-md-3">
+                <h2 class="fw-bold display-6 counter " data-target="1234">0</h2>
+                <p>Garden Completed</p>
+              </div>
+              <div class="col-md-3">
+                <h2 class="fw-bold display-6 counter " data-target="1334">0</h2>
+                <p>Dedicated Staff</p>
+              </div>
+              <div class="col-md-3">
+                <h2 class="fw-bold display-6 counter " data-target="1434">0</h2>
+                <p>Awards Achieved</p>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Counter Section End -->
+
 
         <section class="py-5 text-center">
           <h5 class="mb-3 fs-3" style="color:#008000bd">Our Services </h5>
@@ -1058,9 +1059,9 @@
         </div>
 
         <!-- Footer Start -->
-        <footer class="text-white pt-5 pb-5"
+        <footer class="text-white pt-3 pb-3"
           style="background-color:#0d3b2e;">
-          <div class="container mt-5 mb-5">
+          <div class="container mt-5">
             <div class="row">
 
               <!-- Our Office -->
@@ -1091,21 +1092,21 @@
               <div class="col-md-4 mb-4">
                 <h5 class="fw-bold mb-4">Services</h5>
                 <ul class="list-unstyled">
-                  <li><span class="text-success">›</span> <a href="#"
+                  <li><span class="text-success">›</span> <a href="services.html"
                       class="text-white text-decoration-none">Landscaping</a></li>
-                  <li><span class="text-success">›</span> <a href="#"
+                  <li><span class="text-success">›</span> <a href="services.html"
                       class="text-white text-decoration-none">Pruning
                       Plants</a></li>
-                  <li><span class="text-success">›</span> <a href="#"
+                  <li><span class="text-success">›</span> <a href="services.html"
                       class="text-white text-decoration-none">Irrigation &
                       Drainage</a></li>
-                  <li><span class="text-success">›</span> <a href="#"
+                  <li><span class="text-success">›</span> <a href="services.html"
                       class="text-white text-decoration-none">Garden
                       Maintenance</a></li>
-                  <li><span class="text-success">›</span> <a href="#"
+                  <li><span class="text-success">›</span> <a href="services.html"
                       class="text-white text-decoration-none">Green
                       Technology</a></li>
-                  <li><span class="text-success">›</span> <a href="#"
+                  <li><span class="text-success">›</span> <a href="services.html"
                       class="text-white text-decoration-none">Urban
                       Gardening
                     </a></li>
@@ -1126,13 +1127,8 @@
                   <li><span class="text-success">›</span> <a href="#"
                       class="text-white text-decoration-none">Features</a></li>
                   <li><span class="text-success">›</span> <a href="#"
-                      class="text-white text-decoration-none">Our
-                      Team</a></li>
-                  <li><span class="text-success">›</span> <a href="#"
                       class="text-white text-decoration-none">Feedback
                       Form</a></li>
-                  <li><span class="text-success">›</span> <a href="#"
-                      class="text-white text-decoration-none">Reviews</a></li>
                   <li><span class="text-success">›</span> <a href="#"
                       class="text-white text-decoration-none">Contact
                       US</a></li>
